# everygoodboydeservesfruit.com

./: stack.yaml  we-can-solve-this.cabal  yes.js
scripts/: deploy.sh
site/css/: style.css
site/posts/: 2019-02-17-hello.markdown  2019-02-18-manifesto.markdown  2019-02-18-rhythm-1.markdown  2019-02-24-the-very-basics.markdown  2019-02-26-basic-rhythm.markdown  2019-02-26-job2.markdown
site/scripts/: index.html  vextab-div.js
site/templates/: archive.html  footer.html  google_analytics.html  header.html  nav.html  post.html
src/: Main.hs  MusicCompiler.hs
src/Music/: DSL.hs  Parser.hs  Types.hs
