name:               we-can-solve-this
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

homepage:           http://sandymaguire.me
license:            BSD3
license-file:       LICENSE
author:             Sandy Maguire
maintainer:         sandy@sandymaguire.me

category:           Web

executable poly
  main-is:          Main.hs
  build-depends:    base
                  , sitepipe
                  , pandoc
                  , pandoc-types
                  , strptime
                  , containers
                  , lens
                  , text
                  , aeson
                  , regex-tdfa
                  , transformers
                  , mtl
                  , exceptions
                  , syb
                  , interpolatedstring-perl6
                  , MissingH
                  , generic-lens
                  , time
  ghc-options:      -threaded
  hs-source-dirs:   src
  default-language: Haskell2010
